--- a/config/base_local_planner_params.yaml
+++ b/config/base_local_planner_params.yaml
@@ -3,14 +3,14 @@ TrajectoryPlannerROS:
   holonomic_robot: true
   meter_scoring: true
 
-# pdist_scale: 0.5
-# sim_time: 0.5
+  pdist_scale: 1.2
+#  sim_time: 0.5
 
-#  max_vel_x: 1.0
-#  min_vel_x: 0.1
-#  max_vel_theta: 1.0
-#  min_in_place_vel_theta: 0.4
+  max_vel_x: 2.0
+#   min_vel_x: 0.1
+#   max_vel_theta: 1.0
+#   min_in_place_vel_theta: 0.4
 
-#  acc_lim_theta: 3.2
-#  acc_lim_x: 2.5
-#  acc_lim_y: 2.5        
+#   acc_lim_theta: 3.2
+#   acc_lim_x: 2.5
+#   acc_lim_y: 2.5        
