--- a/config/base_local_planner_params.yaml
+++ b/config/base_local_planner_params.yaml
@@ -1,16 +1,28 @@
 TrajectoryPlannerROS:
+# =================UDACITY_BOT SETTINGS=======================
+#  Uncomment the below settings when using the Udacity bot
+#  holonomic_robot: true
+#  meter_scoring: true
 
+#  pdist_scale: 1.2
+#  max_vel_x: 2.0
+
+# =================CUSTOM R2D2 BOT SETTINGS===================
+# Uncomment the below settinsg when using the R2D2 bot
   holonomic_robot: true
   meter_scoring: true
 
-  pdist_scale: 1.2
+  pdist_scale: 0.75
+  max_vel_x: 0.4
+  max_vel_y: 0.4
 #  sim_time: 0.5
+  yaw_goal_tolerance: 0.05
+  xy_goal_tolerance: 0.15
 
-  max_vel_x: 2.0
 #   min_vel_x: 0.1
-#   max_vel_theta: 1.0
+#  max_vel_theta: 0.4
 #   min_in_place_vel_theta: 0.4
 
 #   acc_lim_theta: 3.2
-#   acc_lim_x: 2.5
-#   acc_lim_y: 2.5        
+  acc_lim_x: 0.5
+  acc_lim_y: 0.5       
