--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -1,13 +1,20 @@
 map_type: costmap
 
-obstacle_range: 2.5
+obstacle_range: 1.0
 raytrace_range: 3.0
 
 transform_tolerance: 0.25
 
-robot_radius: 0.2
-inflation_radius: 0.3
-
 observation_sources: laser_scan_sensor
 
 laser_scan_sensor: {sensor_frame: hokuyo, data_type: LaserScan, topic: /udacity_bot/laser/scan, marking: true, clearing: true}
+
+# =================UDACITY_BOT SETTINGS=======================
+#  Uncomment the below settings when using the Udacity bot
+#robot_radius: 0.2
+#inflation_radius: 0.3
+
+# =================CUSTOM R2D2 BOT SETTINGS===================
+# Uncomment the below settings when using the R2D2 bot
+robot_radius: 0.3
+inflation_radius: 0.5
